updated 5-day forcast with styles and correct info; figured out how to get very first city search to render on page after clicking search button; added on click function for all li tags that were created from past city searches.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     </div>
                      
                   </div>
-                  <div id="history" class="d-flex flex-column">
-                        <ul id="pastCities" class="list-unstyled"></ul>
+                  <div id="historyCities" class="d-flex flex-column">
+                        
                   </div>
             </div>
             <div id="city" class="d-none col-12 col-md-9">
@@ -47,7 +47,7 @@
                 </div>
                 <div id="5Day" class="d-none">
                     <h5>5-Day Forecast:</h5>
-                    <div id="futureWeather"class="row">
+                    <div id="futureWeather"class="row m-0">
                         <div class="future col-2 bg-primary rounded mx-2 text-light">
                             <h5 id="day1"></h5>
                             <div id="day1Icon"></div>
