--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="container-fluid">
         <div class="row">
-            <div class="col-12 col-md-3 rounded">
+            <div class="col-12 col-sm-3 rounded">
                 <h5>Search for a City:</h5>
                 <div class="input-group md-form form-sm form-1 pl-0">
                     <div class="input-group-prepend">
@@ -34,8 +34,8 @@
                         
                   </div>
             </div>
-            <div id="city" class="d-none col-12 col-md-9">
-                <div id="cityInfo" class="border rounded my-1 p-3">
+            <div id="city" class="col-12 col-sm-9 d-flex flex-wrap">
+                <div id="cityInfo" class="d-none w-100 border rounded my-1 p-3">
                     <h5 id="cityName">
                         <span id="currentDay"></span>
                         <span id="cityIcon"></span>
