--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <h5>Search for a City:</h5>
                 <div class="input-group md-form form-sm form-1 pl-0">
                     <div class="input-group-prepend">
-                    <input id="input" class="form-control my-0 py-1" type="text" placeholder="Search" aria-label="Search"> 
-                    <button type="button" class="rounded btn btn-primary"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
+                    <input id="input" class="form-control my-0 py-1" type="text" placeholder="Search" onfocus="this.value=''" aria-label="Search"> 
+                    <button type="button" class="rounded btn btn-primary"><img src="./assets/images/search.png"/></button>
                     </div>
                      
                   </div>
